--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
     <title>Aury Lorena</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/bootstrap-grid.min.css" />
-    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <main class="container-fluid">
     <header class="header container">
@@ -16,7 +14,7 @@
     </header>
     <section class="container-fluid">
       <div class="container main">
-        <div class="main__info">
+        <div class="col main__info">
           <span class="main__text">My name is</span>
           <span class="main__name">Aury Lorena</span>
           <p class="main__paragraph">
@@ -28,7 +26,7 @@
             <button>Know me</button>
           </div>
         </div>
-        <div class="main__image">
+        <div class="col-4 col-lg-6 main__image">
             <img src="/img/main__image.png" alt="">
         </div>
       </div>
